--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,10 @@
     ],
     "require": {
         "php": ">=5.3.2",
-        "symfony/framework-bundle": "*"
+        "symfony/framework-bundle": "~2.1"
+    },
+    "require-dev": {
+        "symfony/class-loader": "~2.1"
     },
     "autoload": {
         "psr-0": { "Kitpages\\UtilBundle": "" }
